system/argocd.ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argo-cd-ui
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.$DOMAIN`)
      services:
        - name: argo-cd-argocd-server
          port: 443
