system/longhorn.ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-frontend
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`longhorn.$DOMAIN`)
      services:
        - name: longhorn-frontend
          port: 80
      middlewares:
        - name: japan7-basic-auth
          namespace: kube-system
