system/traefik.ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.$DOMAIN`)
      services:
        - kind: TraefikService
          name: api@internal
      middlewares:
        - name: japan7-basic-auth
          namespace: kube-system
